# pytorch_backend

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  test_client.py  test_model.py
.github/workflows/: pre-commit.yml
cmake/: TritonPyTorchBackendConfig.cmake.in
examples/: README.md  gen_model.py  requirements
examples/warmup_with_load_api/: query_model_states.py  warmup_models.py
examples/warmup_with_load_api/model_repository/model-v1/: config.pbtxt
examples/warmup_with_load_api/model_repository/model-v1/1/: model.pt
examples/warmup_with_load_api/model_repository/model-v2/: config.pbtxt
examples/warmup_with_load_api/model_repository/warmup_helper/: config.pbtxt
examples/warmup_with_load_api/model_repository/warmup_helper/1/: model.py
examples/warmup_with_requests/: warmup_models.py
examples/warmup_with_requests/model_repository/model-v3/: config.pbtxt
examples/warmup_with_requests/model_repository/warmup_helper/: config.pbtxt
examples/warmup_with_requests/model_repository/warmup_helper/1/: model.py
model_repository/dict_model/: config.pbtxt
model_repository/dict_model/1/: model.pt
src/: inductor_model.cc  inductor_model.hh  inductor_model_instance.cc  inductor_model_instance.hh  libtorch.cc  libtorch.hh  libtorch_utils.cc  libtorch_utils.h  model.py  model_instance_state.cc  model_instance_state.hh  model_state.cc  model_state.hh  naming_convention.cc  naming_convention.hh  string_utilities.cc  string_utils.cc  string_utils.hh  triton_exception.cc  triton_exception.hh  triton_utils.cc  triton_utils.hh
src/pt/: model_instance_state.cc  model_instance_state.hh  model_state.cc  model_state.hh
src/pt2/: call_spec.cc  call_spec.hh  call_spec_type.cc  call_spec_type.hh  inductor_model.cc  inductor_model.hh  inductor_model_instance.cc  inductor_model_instance.hh  io_data.cc  io_data.hh  model_instance_state.cc  model_instance_state.hh  model_state.cc  model_state.hh
tools/: gen_pb_exec_env.sh
